@@ -92,10 +92,12 @@
 -HOUR/-MONTH/-DAY(OFYEAR) +X (<WORD> always, unless the hr/mn/day is X)
 +HOUR/+MONTH/+DAY(OFYEAR) -X (<WORD> those only when the hr/mn/day is X)
      /+-WEEK(OFYEAR)/+-YEAR  ( ... also supports "Xnd Y" and "X of Y")
--SEASON +FALL (<WORD> those only when season is FALL)
-+SEASON -SPRING (<WORD> those whenever the season is SPRING)
--WEATHER +DROUGHT (<WORD> those only when weather is DROUGHT)
-+WEATHER -BLIZZARD (<WORD> those whenever the weather is BLIZZARD)
+-SEASON +FALL (<WORD> when season is not FALL)
++SEASON -SPRING (<WORD> whenever the season is SPRING)
+-WEATHER +DROUGHT (<WORD> when weather is DROUGHT)
++WEATHER -BLIZZARD (<WORD> whenever the weather is BLIZZARD)
+-DOMAIN +CAVELAKESURFACE (<WORD> when not in a CAVELAKESURFACE)
++DOMAIN -MOUNTAINS (<WORD> those in the MOUNTAINS)
 -QUESTWIN "+MY QUEST" (<WORD> those who have not won MY QUEST)
 +QUESTWIN "-MY QUEST" (<WORD> those who have won MY QUEST)
 -EFFECTS +Sleep "+Wood Chopping" (<WORD> all except those with effects)
